--- a/WebUI/src/assets/i18n/en-US.json
+++ b/WebUI/src/assets/i18n/en-US.json
@@ -110,6 +110,7 @@
   "SETTINGS_MODEL_SD_STANDARD_MODEL": "Standard Default Model",
   "SETTINGS_MODEL_SD_STANDARD_INPAINT_MODEL": "Standard Default Inpaint/OutPaint Model",
   "SETTINGS_MODEL_SD_HD_MODEL": "HD Default Model",
+  "SETTINGS_MODEL_SD_HD_INPAINT_MODEL": "HD Default Inpaint/OutPaint Model",
   "SETTINGS_MODEL_RAG_MODEL": "RAG Query Model",
   "SETTINGS_BACKEND_STATUS": "Backend Status",
   "SETTINGS_MODEL_MANAGE_BACKEND": "Manage Backend Components",
@@ -282,6 +283,7 @@
   "COM_DELETE_FILE": "Remove file from the list of available documents",
   "COM_DELETE_ALL_FILES": "Clear the list of available documents",
   "ANSWER_MAX_TOKENS": "Max Tokens",
+  "ANSWER_CONTEXT_SIZE": "Context Size",
   "ANSWER_METRICS": "Metrics",
   "ANSWER_FONT_SIZE": "Font Size",
   "RAG_DOCUMENT_EMBEDDING_MODEL": "Document Embedding Model",
