basic i18n for new textarea

--- a/WebUI/src/assets/i18n/en-US.json
+++ b/WebUI/src/assets/i18n/en-US.json
@@ -5,8 +5,10 @@
   "COM_CLOSE": "Close",
   "COM_ADD": "Add",
   "COM_RESTORE": "Restore Defaults",
-  "COM_SD_PROMPT": "Input prompt to generate image",
   "COM_LLM_PROMPT": "Input prompt to generate answer",
+  "COM_SD_PROMPT": "Input prompt to generate image",
+  "COM_SD_ENHANCE_PROMPT": "Input prompt to enhance image",
+  "COM_VIDEO_PROMPT": "Input prompt to generate video",
   "COM_LLM_HF_PROMPT": "<namespace>/<repo_name>",
   "COM_LLM_HF_PROMPT_GGUF": "<namespace>/<repo_name>/<file_path>",
   "COM_CLICK_UPLOAD": "- Click To Upload Image -",
