--- a/WebUI/src/assets/i18n/en-US.json
+++ b/WebUI/src/assets/i18n/en-US.json
@@ -15,6 +15,7 @@
   "COM_GENERATE": "Generate",
   "COM_GENERATING": "Generating",
   "COM_HISTORY": "History",
+  "COM_SHOW_HISTORY": "Show History",
   "COM_POST_TO_ENHANCE_PROCESS": "Post To Enhance Process",
   "COM_ZOOM_IN": "View Original Size",
   "COM_COPY": "Copy",
