global mapModeToLabel and fewer props in modals

--- a/WebUI/src/assets/i18n/en-US.json
+++ b/WebUI/src/assets/i18n/en-US.json
@@ -125,6 +125,10 @@
   "TAB_ENHANCE": "Enhance",
   "TAB_ANSWER": "Answer",
   "TAB_LEARN_MORE": "Learn More",
+  "MODE_CHAT": "Chat",
+  "MODE_IMAGE_GEN": "Image Gen",
+  "MODE_IMAGE_EDIT": "Image Edit",
+  "MODE_VIDEO": "Video",
   "ENHANCE_INPUT_IMAGE_REQUIRED": "Please set input image before generating",
   "ENHANCE_UPSCALE": "Upscale",
   "ENHANCE_IMAGE_PROMPT": "Image Prompt",
