--- a/WebUI/src/assets/i18n/en-US.json
+++ b/WebUI/src/assets/i18n/en-US.json
@@ -5,10 +5,12 @@
   "COM_CLOSE": "Close",
   "COM_ADD": "Add",
   "COM_RESTORE": "Restore Defaults",
-  "COM_LLM_PROMPT": "Input prompt to generate answer",
   "COM_SD_PROMPT": "Input prompt to generate image",
-  "COM_SD_ENHANCE_PROMPT": "Input prompt to enhance image",
-  "COM_VIDEO_PROMPT": "Input prompt to generate video",
+  "COM_LLM_PROMPT": "Input prompt to generate answer",
+  "COM_PROMPT_CHAT": "Input prompt to generate chat response",
+  "COM_PROMPT_IMAGE_GEN": "Input prompt to generate image",
+  "COM_PROMPT_IMAGE_EDIT": "Input prompt to edit image",
+  "COM_PROMPT_VIDEO": "Input prompt to generate video",
   "COM_LLM_HF_PROMPT": "<namespace>/<repo_name>",
   "COM_LLM_HF_PROMPT_GGUF": "<namespace>/<repo_name>/<file_path>",
   "COM_CLICK_UPLOAD": "- Click To Upload Image -",
