feat: start implementation of new UI

--- a/WebUI/src/assets/i18n/en-US.json
+++ b/WebUI/src/assets/i18n/en-US.json
@@ -7,12 +7,17 @@
   "COM_RESTORE": "Restore Defaults",
   "COM_SD_PROMPT": "Input prompt to generate image",
   "COM_LLM_PROMPT": "Input prompt to generate answer",
+  "COM_PROMPT_CHAT": "Input prompt to generate chat response",
+  "COM_PROMPT_IMAGE_GEN": "Input prompt to generate image",
+  "COM_PROMPT_IMAGE_EDIT": "Input prompt to edit image",
+  "COM_PROMPT_VIDEO": "Input prompt to generate video",
   "COM_LLM_HF_PROMPT": "<namespace>/<repo_name>",
   "COM_LLM_HF_PROMPT_GGUF": "<namespace>/<repo_name>/<file_path>",
   "COM_CLICK_UPLOAD": "- Click To Upload Image -",
   "COM_GENERATE": "Generate",
   "COM_GENERATING": "Generating",
   "COM_HISTORY": "History",
+  "COM_SHOW_HISTORY": "Show History",
   "COM_POST_TO_ENHANCE_PROCESS": "Post To Enhance Process",
   "COM_ZOOM_IN": "View Original Size",
   "COM_COPY": "Copy",
@@ -55,6 +60,7 @@
   "SETTINGS_THEME": "Theme",
   "SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "HD Mode can result in slower than normal performance on systems with less than 12 GB of VRAM or 24GB of system memory for Intel Core Ultra PCs",
   "SETTINGS_MODEL_WORKFLOW_COMFYUI_CONFIRM": "The use of the workflow mode requires ComfyUI to be installed. This is an optional component that can be installed in the AI Playground Setup.",
+  "SETTINGS_MODEL_REQUIREMENTS_NOT_MET": "Not all requirements are met for the selected preset. Do you want to open the AI Playground Setup?",
   "SETTINGS_MODEL_WORKFLOW_COMFYUI_DOWNLOADING": "Installation in progress...",
   "SETTINGS_MODEL_WORKFLOW_COMFYUI_COMPLETED": "Installation successful!",
   "SETTINGS_MODEL_WORKFLOW_COMFYUI_ERROR": "Installation failed, due to",
@@ -121,6 +127,10 @@
   "TAB_ENHANCE": "Enhance",
   "TAB_ANSWER": "Answer",
   "TAB_LEARN_MORE": "Learn More",
+  "MODE_CHAT": "Chat",
+  "MODE_IMAGE_GEN": "Image Gen",
+  "MODE_IMAGE_EDIT": "Image Edit",
+  "MODE_VIDEO": "Video",
   "ENHANCE_INPUT_IMAGE_REQUIRED": "Please set input image before generating",
   "ENHANCE_UPSCALE": "Upscale",
   "ENHANCE_IMAGE_PROMPT": "Image Prompt",
@@ -254,6 +264,7 @@
   "INPUT_PROMPT": "Prompt",
   "BACKEND": "Backend",
   "DEVICE": "Device",
+  "MODEL": "Model",
   "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "Checkpoint Model",
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "Frame Rate",
   "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "Total Frames",
