--- a/WebUI/src/assets/i18n/en-US.json
+++ b/WebUI/src/assets/i18n/en-US.json
@@ -296,6 +296,10 @@
   "COM_UNCHECK_ALL_FILES": "Remove all files from the list of documents used to generate answers",
   "COM_DELETE_FILE": "Remove file from the list of available documents",
   "COM_DELETE_ALL_FILES": "Clear the list of available documents",
+  "COM_DELETE_ALL_IMAGES_QUESTION": "Delete all images?",
+  "COM_DELETE_ALL_IMAGES_EXPLANATION": "This will permanently remove all images.",
+  "COM_DELETE_IMAGE_QUESTION": "Delete this image?",
+  "COM_DELETE_IMAGE_EXPLANATION": "This will permanently remove this images.",
   "ANSWER_MAX_TOKENS": "Max Tokens",
   "ANSWER_CONTEXT_SIZE": "Context Size",
   "ANSWER_METRICS": "Metrics",
