--- a/WebUI/src/assets/i18n/de.json
+++ b/WebUI/src/assets/i18n/de.json
@@ -267,10 +267,12 @@
   "INPUT_PROMPT": "Prompt",
   "BACKEND": "Backend",
   "DEVICE": "Gerät",
+  "MICROPHONE": "Mikrofon",
   "MODEL": "Modell",
   "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "Checkpoint-Modell",
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "Bildrate",
   "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "Gesamtanzahl Frames",
+  "SETTINGS_AUDIO": "Audioeingabe",
 
   "BACKEND_STOP": "Backend stoppen",
   "BACKEND_START": "Backend starten",
