--- a/WebUI/src/assets/i18n/en-US.json
+++ b/WebUI/src/assets/i18n/en-US.json
@@ -273,6 +273,8 @@
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "Frame Rate",
   "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "Total Frames",
   "SETTINGS_AUDIO": "Audio Input",
+  "SETTINGS_AUDIO_SILENCE_DETECTION": "Silence Detection",
+  "SETTINGS_AUDIO_SILENCE_DURATION": "Silence Duration",
 
   "BACKEND_STOP": "Stop Backend",
   "BACKEND_START": "Start Backend",
