--- a/WebUI/src/assets/i18n/de.json
+++ b/WebUI/src/assets/i18n/de.json
@@ -58,7 +58,6 @@
   "COM_REPAIR": "Reparieren",
   "COM_CONTINUE": "Fortsetzen",
   "COM_GO_TO_SETUP": "Zum Backend-Manager gehen",
-  "COM_LOAD_WORKFLOW_DEFAULTS": "Workflow-Defaults laden",
   "SETTINGS_THEME": "Design",
   "SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "Der HD-Modus kann zu einer langsameren Leistung auf Systemen mit weniger als 12 GB VRAM oder 24 GB Systemarbeitsspeicher bei Intel Core Ultra-PCs führen",
   "SETTINGS_MODEL_WORKFLOW_COMFYUI_CONFIRM": "Die Verwendung des Workflow-Modus erfordert die Installation von ComfyUI. Dies ist eine optionale Komponente, die im AI-Playground Backend-Manager installiert werden kann.",
@@ -247,8 +246,7 @@
   "BACKEND_STATUS_INSTALLING": "Installiert",
   "BACKEND_STATUS_FAILED": "Fehlgeschlagen",
   "SETTINGS_IMAGE_MODE": "Modus",
-  "SETTINGS_IMAGE_WORKFLOW": "Workflow",
-  "SETTINGS_IMAGE_DEFAULT": "Default",
+  "SETTINGS_IMAGE_PRESET": "Workflow",
   "SETTINGS_IMAGE_COMFY_REFERENCE_IMAGE": "Referenzbild",
   "SETTINGS_IMAGE_COMFY_FILENAME_PREFIX": "Dateinamenspräfix",
   "SETTINGS_IMAGE_COMFY_CANNY_LOW_THRESHOLD": "Canny - Niedriger Threshold",
@@ -257,8 +255,6 @@
   "SETTINGS_IMAGE_COMFY_ORIGINAL_IMAGE": "Originales Bild",
   "SETTINGS_IMAGE_COMFY_CONTROLNET_STRENGTH": "ControlNet - Stärke",
   "SETTINGS_IMAGE_COMFY_NEW_FACE_IMAGE": "Neues Gesichtsbild",
-  "WORKFLOW_RELOAD_INFO": "Workflows von der Festplatte laden.",
-  "WORKFLOW_DOWNLOAD_INFO": "Neueste Workflows herunterladen und vorhandene Workflows sichern.",
   "WORKFLOW_HIGH_VRAM_INFO": "Dieses Modell erfordert viel VRAM. Reduzieren Sie bei Leistungsproblemen die Auflösung und/oder starten Sie das ComfyUI-Backend neu.",
   "WORKFLOW_HIGH_VRAM_WARNING": "Viel VRAM nötig",
   "LOADING_VERIFYING_BACKENDS": "Backends überprüfen",
