--- a/WebUI/src/assets/i18n/en-US.json
+++ b/WebUI/src/assets/i18n/en-US.json
@@ -58,7 +58,6 @@
   "COM_REPAIR": "Repair",
   "COM_CONTINUE": "Continue",
   "COM_GO_TO_SETUP": "Go to Setup",
-  "COM_LOAD_WORKFLOW_DEFAULTS": "Load workflow defaults",
   "SETTINGS_THEME": "Theme",
   "SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "HD Mode can result in slower than normal performance on systems with less than 12 GB of VRAM or 24GB of system memory for Intel Core Ultra PCs",
   "SETTINGS_MODEL_WORKFLOW_COMFYUI_CONFIRM": "The use of the workflow mode requires ComfyUI to be installed. This is an optional component that can be installed in the AI Playground Setup.",
@@ -247,8 +246,7 @@
   "BACKEND_STATUS_INSTALLING": "Installing",
   "BACKEND_STATUS_FAILED": "Failed",
   "SETTINGS_IMAGE_MODE": "Mode",
-  "SETTINGS_IMAGE_WORKFLOW": "Workflow",
-  "SETTINGS_IMAGE_DEFAULT": "Default",
+  "SETTINGS_IMAGE_PRESET": "Preset",
   "SETTINGS_IMAGE_COMFY_REFERENCE_IMAGE": "Reference Image",
   "SETTINGS_IMAGE_COMFY_FILENAME_PREFIX": "Filename Prefix",
   "SETTINGS_IMAGE_COMFY_CANNY_LOW_THRESHOLD": "Canny - Low Threshold",
@@ -257,8 +255,6 @@
   "SETTINGS_IMAGE_COMFY_ORIGINAL_IMAGE": "Original Image",
   "SETTINGS_IMAGE_COMFY_CONTROLNET_STRENGTH": "ControlNet - Strength",
   "SETTINGS_IMAGE_COMFY_NEW_FACE_IMAGE": "New Face Image",
-  "WORKFLOW_RELOAD_INFO": "Reload workflows from disk.",
-  "WORKFLOW_DOWNLOAD_INFO": "Download latest workflows and back up existing workflows.",
   "WORKFLOW_HIGH_VRAM_INFO": "This model requires a lot of VRAM. Reduce the resolution and/or restart the ComfyUI backend when in case you experience a poor performance.",
   "WORKFLOW_HIGH_VRAM_WARNING": "high VRAM required",
   "LOADING_VERIFYING_BACKENDS": "Verifying backends",
