--- a/WebUI/src/assets/i18n/ja.json
+++ b/WebUI/src/assets/i18n/ja.json
@@ -50,7 +50,6 @@
   "COM_REPAIR": "修復",
   "COM_CONTINUE": "続行",
   "COM_GO_TO_SETUP": "セットアップに移動",
-  "COM_LOAD_WORKFLOW_DEFAULTS": "ワークフローのデフォルトを読み込む",
   "SETTINGS_THEME": "テーマ",
   "SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "12GB以下のVRAMまたは24GB以下のシステムメモリー搭載の Intel Core Ultra PC にて、HDモード選択時には通常よりも遅い場合があります",
   "SETTINGS_MODEL_WORKFLOW_COMFYUI_CONFIRM": "ワークフロー モードを使用するには、ComfyUIをインストールする必要があります。これは、 AI Playground のセットアップでインストールできるオプションコンポーネントです。",
@@ -232,8 +231,7 @@
   "BACKEND_STATUS_INSTALLING": "インストール中",
   "BACKEND_STATUS_FAILED": "失敗",
   "SETTINGS_IMAGE_MODE": "モード",
-  "SETTINGS_IMAGE_WORKFLOW": "ワークフロー",
-  "SETTINGS_IMAGE_DEFAULT": "デフォルト",
+  "SETTINGS_IMAGE_PRESET": "ワークフロー",
   "SETTINGS_IMAGE_COMFY_REFERENCE_IMAGE": "参照画像",
   "SETTINGS_IMAGE_COMFY_FILENAME_PREFIX": "ファイル名プレフィックス",
   "SETTINGS_IMAGE_COMFY_CANNY_LOW_THRESHOLD": "エッジ検出 - 低しきい値",
@@ -242,8 +240,6 @@
   "SETTINGS_IMAGE_COMFY_ORIGINAL_IMAGE": "元の画像",
   "SETTINGS_IMAGE_COMFY_CONTROLNET_STRENGTH": "制御ネットワーク - 強度",
   "SETTINGS_IMAGE_COMFY_NEW_FACE_IMAGE": "新しい顔画像",
-  "WORKFLOW_RELOAD_INFO": "ディスクからワークフローを再読み込みします。",
-  "WORKFLOW_DOWNLOAD_INFO": "最新のワークフローをダウンロードし、既存のワークフローをバックアップします。",
   "WORKFLOW_HIGH_VRAM_INFO": "このモデルは大量のビデオメモリ（VRAM）を必要とします。パフォーマンスが低下する場合は、解像度を下げるか、ComfyUIバックエンドを再起動してください。",
   "WORKFLOW_HIGH_VRAM_WARNING": "大量のビデオメモリが必要",
   "LOADING_VERIFYING_BACKENDS": "バックエンドを確認中",
