--- a/WebUI/src/assets/i18n/zh-CN.json
+++ b/WebUI/src/assets/i18n/zh-CN.json
@@ -50,7 +50,6 @@
   "COM_REPAIR": "修复",
   "COM_CONTINUE": "继续",
   "COM_GO_TO_SETUP": "前往设置",
-  "COM_LOAD_WORKFLOW_DEFAULTS": "加载工作流默认值",
   "SETTINGS_THEME": "主题",
   "SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "高清模式可能导致性能下降，尤其是在显存小于12GB或系统内存小于24GB的 Intel Core Ultra 处理器电脑上",
   "SETTINGS_MODEL_WORKFLOW_COMFYUI_CONFIRM": "需要安装 ComfyUI 组件方可使用工作流模式。可选的 ComfyUI 组件可以在基本设置页面中安装。",
@@ -232,8 +231,7 @@
   "BACKEND_STATUS_INSTALLING": "安装中",
   "BACKEND_STATUS_FAILED": "失败",
   "SETTINGS_IMAGE_MODE": "模式",
-  "SETTINGS_IMAGE_WORKFLOW": "工作流",
-  "SETTINGS_IMAGE_DEFAULT": "默认",
+  "SETTINGS_IMAGE_PRESET": "工作流",
   "SETTINGS_IMAGE_COMFY_REFERENCE_IMAGE": "参考图片",
   "SETTINGS_IMAGE_COMFY_FILENAME_PREFIX": "文件名前缀",
   "SETTINGS_IMAGE_COMFY_CANNY_LOW_THRESHOLD": "Canny - 低阈值",
@@ -242,8 +240,6 @@
   "SETTINGS_IMAGE_COMFY_ORIGINAL_IMAGE": "原始图片",
   "SETTINGS_IMAGE_COMFY_CONTROLNET_STRENGTH": "ControlNet - 强度",
   "SETTINGS_IMAGE_COMFY_NEW_FACE_IMAGE": "新面部图片",
-  "WORKFLOW_RELOAD_INFO": "从磁盘重新加载工作流",
-  "WORKFLOW_DOWNLOAD_INFO": "下载最新工作流并备份现有工作流",
   "WORKFLOW_HIGH_VRAM_INFO": "此模型需要大量显存。如果遇到性能问题，请降低分辨率或重启ComfyUI后端",
   "WORKFLOW_HIGH_VRAM_WARNING": "需要大量显存",
   "LOADING_VERIFYING_BACKENDS": "验证后端",
