--- a/WebUI/src/assets/i18n/zh-TW.json
+++ b/WebUI/src/assets/i18n/zh-TW.json
@@ -50,7 +50,6 @@
   "COM_REPAIR": "修復",
   "COM_CONTINUE": "繼續",
   "COM_GO_TO_SETUP": "前往設定",
-  "COM_LOAD_WORKFLOW_DEFAULTS": "載入工作流程預設值",
   "SETTINGS_THEME": "主題",
   "SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "高解析度模式可能導致性能下降，特別是在顯示記憶體小於12GB或系統記憶體小於24GB的 Intel Core Ultra 處理器電腦上",
   "SETTINGS_MODEL_WORKFLOW_COMFYUI_CONFIRM": "工作流程模式需要安裝 ComfyUI。這是可以在 AI Playground 設定中安裝的選用組件",
@@ -232,8 +231,7 @@
   "BACKEND_STATUS_INSTALLING": "安裝中",
   "BACKEND_STATUS_FAILED": "失敗",
   "SETTINGS_IMAGE_MODE": "模式",
-  "SETTINGS_IMAGE_WORKFLOW": "工作流程",
-  "SETTINGS_IMAGE_DEFAULT": "預設",
+  "SETTINGS_IMAGE_PRESET": "工作流程",
   "SETTINGS_IMAGE_COMFY_REFERENCE_IMAGE": "參考圖片",
   "SETTINGS_IMAGE_COMFY_FILENAME_PREFIX": "檔案名稱前綴",
   "SETTINGS_IMAGE_COMFY_CANNY_LOW_THRESHOLD": "Canny - 低閾值",
@@ -242,8 +240,6 @@
   "SETTINGS_IMAGE_COMFY_ORIGINAL_IMAGE": "原始圖片",
   "SETTINGS_IMAGE_COMFY_CONTROLNET_STRENGTH": "ControlNet - 強度",
   "SETTINGS_IMAGE_COMFY_NEW_FACE_IMAGE": "新臉部圖片",
-  "WORKFLOW_RELOAD_INFO": "從磁碟重新載入工作流程",
-  "WORKFLOW_DOWNLOAD_INFO": "下載最新工作流程並備份現有工作流程",
   "WORKFLOW_HIGH_VRAM_INFO": "此模型需要大量顯示記憶體。如果遇到效能問題，請降低解析度或重啟ComfyUI後端",
   "WORKFLOW_HIGH_VRAM_WARNING": "需要大量顯示記憶體",
   "LOADING_VERIFYING_BACKENDS": "驗證後端",
