--- a/WebUI/src/assets/i18n/es.json
+++ b/WebUI/src/assets/i18n/es.json
@@ -50,7 +50,6 @@
   "COM_REPAIR": "Reparar",
   "COM_CONTINUE": "Continuar",
   "COM_GO_TO_SETUP": "Ir a configuración",
-  "COM_LOAD_WORKFLOW_DEFAULTS": "Cargar valores predeterminados del flujo de trabajo",
   "SETTINGS_THEME": "Tema",
   "SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "El modo HD puede resultar en un rendimiento más lento que el normal en sistemas con menos de 12 GB de VRAM o 24 GB de memoria del sistema para PCs Intel Core Ultra",
   "SETTINGS_MODEL_WORKFLOW_COMFYUI_CONFIRM": "El uso del modo de flujo de trabajo requiere la instalación de ComfyUI. Esta es una componente opcional que se puede instalar en la configuración de AI Playground",
@@ -232,8 +231,7 @@
   "BACKEND_STATUS_INSTALLING": "Instalando...",
   "BACKEND_STATUS_FAILED": "Fallido",
   "SETTINGS_IMAGE_MODE": "Modo",
-  "SETTINGS_IMAGE_WORKFLOW": "Flujo de trabajo",
-  "SETTINGS_IMAGE_DEFAULT": "Predeterminado",
+  "SETTINGS_IMAGE_PRESET": "Flujo de trabajo",
   "SETTINGS_IMAGE_COMFY_REFERENCE_IMAGE": "Imagen de referencia",
   "SETTINGS_IMAGE_COMFY_FILENAME_PREFIX": "Prefijo del nombre de archivo",
   "SETTINGS_IMAGE_COMFY_CANNY_LOW_THRESHOLD": "Canny - Umbral bajo",
@@ -242,8 +240,6 @@
   "SETTINGS_IMAGE_COMFY_ORIGINAL_IMAGE": "Imagen original",
   "SETTINGS_IMAGE_COMFY_CONTROLNET_STRENGTH": "ControlNet - Fuerza",
   "SETTINGS_IMAGE_COMFY_NEW_FACE_IMAGE": "Nueva imagen de rostro",
-  "WORKFLOW_RELOAD_INFO": "Recargar flujos de trabajo desde el disco",
-  "WORKFLOW_DOWNLOAD_INFO": "Descargar los flujos de trabajo más recientes y respaldar los existentes",
   "WORKFLOW_HIGH_VRAM_INFO": "Este modelo requiere mucha VRAM. Reduce la resolución y/o reinicia el backend de ComfyUI si experimentas bajo rendimiento",
   "WORKFLOW_HIGH_VRAM_WARNING": "alta VRAM requerida",
   "LOADING_VERIFYING_BACKENDS": "Verificando backends",
