--- a/WebUI/src/assets/i18n/id.json
+++ b/WebUI/src/assets/i18n/id.json
@@ -50,7 +50,6 @@
   "COM_REPAIR": "Perbaiki",
   "COM_CONTINUE": "Lanjutkan",
   "COM_GO_TO_SETUP": "Pergi ke Pengaturan",
-  "COM_LOAD_WORKFLOW_DEFAULTS": "Muat default alur kerja",
   "SETTINGS_THEME": "Tema",
   "SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "Mode HD dapat mengakibatkan kinerja yang lebih lambat dari biasanya pada sistem dengan VRAM kurang dari 12 GB atau memori sistem 24 GB untuk PC Intel Core Ultra",
   "SETTINGS_MODEL_WORKFLOW_COMFYUI_CONFIRM": "Penggunaan mode alur kerja memerlukan pemasangan ComfyUI. Ini adalah komponen opsional yang dapat dipasang di pengaturan AI Playground.",
@@ -232,8 +231,7 @@
   "BACKEND_STATUS_INSTALLING": "Sedang Memasang",
   "BACKEND_STATUS_FAILED": "Gagal",
   "SETTINGS_IMAGE_MODE": "Mode",
-  "SETTINGS_IMAGE_WORKFLOW": "Alur Kerja",
-  "SETTINGS_IMAGE_DEFAULT": "Default",
+  "SETTINGS_IMAGE_PRESET": "Alur Kerja",
   "SETTINGS_IMAGE_COMFY_REFERENCE_IMAGE": "Gambar Referensi",
   "SETTINGS_IMAGE_COMFY_FILENAME_PREFIX": "Awalan Nama Berkas",
   "SETTINGS_IMAGE_COMFY_CANNY_LOW_THRESHOLD": "Canny - Ambang Rendah",
@@ -242,8 +240,6 @@
   "SETTINGS_IMAGE_COMFY_ORIGINAL_IMAGE": "Gambar Asli",
   "SETTINGS_IMAGE_COMFY_CONTROLNET_STRENGTH": "ControlNet - Kekuatan",
   "SETTINGS_IMAGE_COMFY_NEW_FACE_IMAGE": "Gambar Wajah Baru",
-  "WORKFLOW_RELOAD_INFO": "Muat ulang alur kerja dari disk.",
-  "WORKFLOW_DOWNLOAD_INFO": "Unduh alur kerja terbaru dan cadangkan alur kerja yang ada.",
   "WORKFLOW_HIGH_VRAM_INFO": "Model ini memerlukan banyak VRAM. Kurangi resolusi dan/atau mulai ulang backend ComfyUI jika Anda mengalami masalah kinerja.",
   "WORKFLOW_HIGH_VRAM_WARNING": "VRAM tinggi diperlukan",
   "LOADING_VERIFYING_BACKENDS": "Memverifikasi backend",
