--- a/WebUI/src/assets/i18n/vi.json
+++ b/WebUI/src/assets/i18n/vi.json
@@ -50,7 +50,6 @@
   "COM_REPAIR": "Sửa chữa",
   "COM_CONTINUE": "Tiếp tục",
   "COM_GO_TO_SETUP": "Đi đến Thiết lập",
-  "COM_LOAD_WORKFLOW_DEFAULTS": "Tải mặc định quy trình",
   "SETTINGS_THEME": "Giao diện",
   "SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "Chế độ HD có thể làm giảm hiệu suất trên hệ thống có VRAM dưới 12 GB hoặc bộ nhớ hệ thống 24GB cho PC Intel Core Ultra",
   "SETTINGS_MODEL_WORKFLOW_COMFYUI_CONFIRM": "Sử dụng chế độ quy trình yêu cầu ComfyUI được cài đặt. Đây là thành phần tùy chọn có thể được cài đặt trong Thiết lập AI Playground.",
@@ -232,8 +231,7 @@
   "BACKEND_STATUS_INSTALLING": "Đang cài đặt",
   "BACKEND_STATUS_FAILED": "Thất bại",
   "SETTINGS_IMAGE_MODE": "Chế độ",
-  "SETTINGS_IMAGE_WORKFLOW": "Quy trình",
-  "SETTINGS_IMAGE_DEFAULT": "Mặc định",
+  "SETTINGS_IMAGE_PRESET": "Quy trình",
   "SETTINGS_IMAGE_COMFY_REFERENCE_IMAGE": "Ảnh tham chiếu",
   "SETTINGS_IMAGE_COMFY_FILENAME_PREFIX": "Tiền tố tên tệp",
   "SETTINGS_IMAGE_COMFY_CANNY_LOW_THRESHOLD": "Canny - Ngưỡng thấp",
@@ -242,8 +240,6 @@
   "SETTINGS_IMAGE_COMFY_ORIGINAL_IMAGE": "Ảnh gốc",
   "SETTINGS_IMAGE_COMFY_CONTROLNET_STRENGTH": "ControlNet - Độ mạnh",
   "SETTINGS_IMAGE_COMFY_NEW_FACE_IMAGE": "Ảnh khuôn mặt mới",
-  "WORKFLOW_RELOAD_INFO": "Tải lại quy trình từ ổ đĩa.",
-  "WORKFLOW_DOWNLOAD_INFO": "Tải về quy trình mới nhất và sao lưu quy trình hiện có.",
   "WORKFLOW_HIGH_VRAM_INFO": "Mô hình này yêu cầu nhiều VRAM. Giảm độ phân giải và/hoặc khởi động lại backend ComfyUI khi gặp hiệu suất kém.",
   "WORKFLOW_HIGH_VRAM_WARNING": "yêu cầu VRAM cao",
   "LOADING_VERIFYING_BACKENDS": "Đang xác minh backends",
