--- a/WebUI/src/assets/i18n/de.json
+++ b/WebUI/src/assets/i18n/de.json
@@ -267,7 +267,7 @@
   "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "Checkpoint-Modell",
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "Bildrate",
   "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "Gesamtanzahl Frames",
-  "SETTINGS_AUDIO": "Audioeingabe",
+  "SETTINGS_AUDIO": "Audio",
   "SETTINGS_AUDIO_SILENCE_DETECTION": "Stille-Erkennung",
   "SETTINGS_AUDIO_SILENCE_DURATION": "Stille-Dauer",
 
