Rework image history buttons
- Remove dysfunctional 'reload' option
- Rename "Delete" to "Remove" and adjust text that file remains on disk
- Adjust dialog texts for 'clear history' in toolbar

Signed-off-by: Lukas Baron <lukas.baron@tngtech.com>

--- a/WebUI/src/assets/i18n/de.json
+++ b/WebUI/src/assets/i18n/de.json
@@ -30,6 +30,7 @@
   "COM_RESTART": "Neustart",
   "COM_START": "Start",
   "COM_DELETE": "Löschen",
+  "COM_REMOVE": "Entfernen",
   "COM_LOAD_IMAGE": "Bild laden",
   "COM_LOAD_VIDEO": "Video laden",
   "COM_DOWNLOAD_MODEL": "Modell herunterladen",
@@ -295,10 +296,10 @@
   "COM_UNCHECK_ALL_FILES": "Alle Dateien aus der Liste der Dokumente entfernen, die zur Antwortgenerierung verwendet werden",
   "COM_DELETE_FILE": "Datei aus der Liste verfügbarer Dokumente entfernen",
   "COM_DELETE_ALL_FILES": "Liste verfügbarer Dokumente leeren",
-  "COM_DELETE_ALL_IMAGES_QUESTION": "Alle Bilder löschen?",
-  "COM_DELETE_ALL_IMAGES_EXPLANATION": "Dies wird alle Bilder dauerhaft entfernen.",
-  "COM_DELETE_IMAGE_QUESTION": "Dieses Bild löschen?",
-  "COM_DELETE_IMAGE_EXPLANATION": "Dies wird dieses Bild dauerhaft entfernen.",
+  "COM_DELETE_ALL_IMAGES_QUESTION": "Bildverlauf löschen?",
+  "COM_DELETE_ALL_IMAGES_EXPLANATION": "Dies wird alle Bilder dauerhaft aus dem Verlauf entfernen. Die Dateien auf der Festplatte bleiben erhalten.",
+  "COM_DELETE_IMAGE_QUESTION": "Dieses Bild aus dem Verlauf entfernen?",
+  "COM_DELETE_IMAGE_EXPLANATION": "Dies wird das Bild dauerhaft ausblenden. Die Datei auf der Festplatte bleibt erhalten.",
   "ANSWER_MAX_TOKENS": "Maximale Tokenanzahl",
   "ANSWER_CONTEXT_SIZE": "Kontextgröße",
   "ANSWER_METRICS": "Metriken",
