--- a/WebUI/src/assets/i18n/en-US.json
+++ b/WebUI/src/assets/i18n/en-US.json
@@ -30,6 +30,7 @@
   "COM_RESTART": "Restart",
   "COM_START": "Start",
   "COM_DELETE": "Delete",
+  "COM_REMOVE": "Remove",
   "COM_LOAD_IMAGE": "Load Image",
   "COM_LOAD_VIDEO": "Load Video",
   "COM_DOWNLOAD_MODEL": "Downloading model",
@@ -295,10 +296,10 @@
   "COM_UNCHECK_ALL_FILES": "Remove all files from the list of documents used to generate answers",
   "COM_DELETE_FILE": "Remove file from the list of available documents",
   "COM_DELETE_ALL_FILES": "Clear the list of available documents",
-  "COM_DELETE_ALL_IMAGES_QUESTION": "Delete all images?",
-  "COM_DELETE_ALL_IMAGES_EXPLANATION": "This will permanently remove all images.",
-  "COM_DELETE_IMAGE_QUESTION": "Delete this image?",
-  "COM_DELETE_IMAGE_EXPLANATION": "This will permanently remove this images.",
+  "COM_DELETE_ALL_IMAGES_QUESTION": "Clear image history?",
+  "COM_DELETE_ALL_IMAGES_EXPLANATION": "This will permanently remove all images from history. The files will remain on disk.",
+  "COM_DELETE_IMAGE_QUESTION": "Remove this image from history?",
+  "COM_DELETE_IMAGE_EXPLANATION": "This will permanently hide this image. The file will remain on disk.",
   "ANSWER_MAX_TOKENS": "Max Tokens",
   "ANSWER_CONTEXT_SIZE": "Context Size",
   "ANSWER_METRICS": "Metrics",
