--- a/WebUI/src/assets/i18n/es.json
+++ b/WebUI/src/assets/i18n/es.json
@@ -23,6 +23,7 @@
   "COM_RESTART": "Reiniciar",
   "COM_START": "Iniciar",
   "COM_DELETE": "Eliminar",
+  "COM_REMOVE": "Eliminar",
   "COM_LOAD_IMAGE": "Cargar imagen",
   "COM_DOWNLOAD_MODEL": "Descargar modelo",
   "COM_DOWNLOAD_SPEED": "Velocidad de descarga",
