--- a/WebUI/src/assets/i18n/id.json
+++ b/WebUI/src/assets/i18n/id.json
@@ -23,6 +23,7 @@
   "COM_RESTART": "Mulai Ulang",
   "COM_START": "Mulai",
   "COM_DELETE": "Hapus",
+  "COM_REMOVE": "Hapus",
   "COM_LOAD_IMAGE": "Muat Gambar",
   "COM_DOWNLOAD_MODEL": "Model pengunduhan",
   "COM_DOWNLOAD_SPEED": "Kecepatan pengunduhan",
