feat: improve image edit functionality
* add safety checking to image edit workflows
* improve image edit reference image handling
  * images can now be added from within edit mode and via the prompt area
* enhance device detection for OpenVINO

Refs:  #164 #165

--- a/WebUI/src/assets/i18n/en-US.json
+++ b/WebUI/src/assets/i18n/en-US.json
@@ -151,8 +151,8 @@
   "ENHANCE_INPAINT_USE_IMAGE_MODEL": "Use Current Image Model",
   "ENHANCE_COM_DENOISE": "Denoise Strength",
   "ENHANCE_OUTPAINT_DIRECTION": "Direction",
-  "ENHANCE_PREVIEW_BEFORE_PROCESS": "Before Process",
-  "ENHANCE_PREVIEW_AFTER_PROCESS": "After Process",
+  "ENHANCE_PREVIEW_BEFORE_PROCESS": "Reference Image",
+  "ENHANCE_PREVIEW_AFTER_PROCESS": "Edited Image",
   "ENHANCE_IMAGE_PROMPT_TIP": "Describe how you want the image to be stylized. Include descriptions of the original image you want to keep and descriptions of what you want to be different. Adjust the denoise slider to increase or decrease the how much influence your prompt has in the outcome",
   "ENHANCE_INPAINT_TIP": "Use the pen tool to mask an area. Describe in the prompt what you want to fix or fill. Select the fix or fill option, then adjust the level of influence the prompt has",
   "ENHANCE_OUTPAINT_TIP": "Select the direction you want to expand, adjust the strength of the denoise if necessary, and enter a prompt word in the text box. The expanded image will be generated",
