--- a/WebUI/src/assets/i18n/zh-TW.json
+++ b/WebUI/src/assets/i18n/zh-TW.json
@@ -159,6 +159,8 @@
   "REQUEST_LLM_SINGLE_EXAMPLE": "<namespace>/<repo_name>/<file_path>，例如 'microsoft/Phi-3-mini-4k-instruct-gguf/Phi-3-mini-4k-instruct-q4.gguf'",
   "REQUEST_LLM_MODEL_DISCLAIMER_1": "注意：並非huggingface.co上的每個模型都適合您要執行的任務",
   "REQUEST_LLM_MODEL_DISCLAIMER_2": "下載前請仔細閱讀模型介紹和要求",
+  "REQUEST_LLM_VISION_MODEL_OPTIONAL": "視覺模型（選填）",
+  "REQUEST_LLM_VISION_MODEL_DESCRIPTION": "選填：為支援圖像理解的模型添加視覺模型組件（mmproj）。",
   "DOWNLOADER_CONFRIM_TIP": "缺少運行所需的一個或多個模型。是否要下載以下列出的模型？",
   "DOWNLOADER_MODEL": "模型",
   "DOWNLOADER_INFO": "資訊",
