--- a/WebUI/src/assets/i18n/en-US.json
+++ b/WebUI/src/assets/i18n/en-US.json
@@ -173,7 +173,7 @@
   "REQUEST_LLM_SINGLE_EXAMPLE": "<namespace>/<repo_name>/<file_path>, e.g. 'microsoft/Phi-3-mini-4k-instruct-gguf/Phi-3-mini-4k-instruct-q4.gguf'",
   "REQUEST_LLM_MODEL_DISCLAIMER_1": "NOTE: Not every model on huggingface.co is suited for the task you want it to perform.",
   "REQUEST_LLM_MODEL_DISCLAIMER_2": "Carefully read the model introduction and requirements before downloading.",
-  "REQUEST_LLM_VISION_MODEL_OPTIONAL": "Vision Model (Optional)",
+  "REQUEST_LLM_VISION_MODEL_OPTIONAL": "Vision Model (mmproj)",
   "REQUEST_LLM_VISION_MODEL_DESCRIPTION": "Optional: Add a vision model component (mmproj) for models that support image understanding.",
   "DOWNLOADER_CONFRIM_TIP": "You are missing one or more models needed to run. Would you like to download the model(s) listed below?",
   "DOWNLOADER_MODEL": "Model",
