chore: update dependencies

--- a/WebUI/src/assets/i18n/en-US.json
+++ b/WebUI/src/assets/i18n/en-US.json
@@ -249,6 +249,7 @@
   "BACKEND_STATUS_FAILED": "Failed",
   "SETTINGS_IMAGE_MODE": "Mode",
   "SETTINGS_IMAGE_PRESET": "Preset",
+  "SETTINGS_IMAGE_VARIANT": "Variant",
   "SETTINGS_IMAGE_COMFY_REFERENCE_IMAGE": "Reference Image",
   "SETTINGS_IMAGE_COMFY_FILENAME_PREFIX": "Filename Prefix",
   "SETTINGS_IMAGE_COMFY_CANNY_LOW_THRESHOLD": "Canny - Low Threshold",
