feat: allow setting hf url and comfyui parameters via UI

--- a/WebUI/src/assets/i18n/en-US.json
+++ b/WebUI/src/assets/i18n/en-US.json
@@ -109,6 +109,14 @@
   "SETTINGS_MODEL_HUGGINGFACE": "Hugging Face",
   "SETTINGS_MODEL_HUGGINGFACE_API_TOKEN": "API Token",
   "SETTINGS_MODEL_HUGGINGFACE_INVALID_TOKEN_TEXT": "Please enter a valid token (hf_***).",
+  "SETTINGS_MODEL_HUGGINGFACE_SETTINGS": "HuggingFace Settings",
+  "SETTINGS_MODEL_HUGGINGFACE_MIRROR_URL": "Mirror URL",
+  "SETTINGS_MODEL_HUGGINGFACE_VERIFY": "Verify Mirror",
+  "SETTINGS_MODEL_HUGGINGFACE_APPLY": "Apply & Restart Backends",
+  "SETTINGS_MODEL_HUGGINGFACE_APPLY_CONFIRM": "Changing HuggingFace settings requires restarting AI backend and ComfyUI backend. Continue?",
+  "SETTINGS_MODEL_HUGGINGFACE_APPLY_SUCCESS": "Settings applied and backends restarted successfully",
+  "SETTINGS_MODEL_HUGGINGFACE_VERIFICATION_SUCCESS": "✓ Mirror is accessible",
+  "SETTINGS_MODEL_HUGGINGFACE_VERIFICATION_FAILED": "⚠ Could not verify mirror: {error}",
   "SETTINGS_MODEL_SD_CHECKPOINTS": "Image Model Path",
   "SETTINGS_MODEL_SD_INPAINT_CHECKPOINTS": "Image Inpaint Model Path",
   "SETTINGS_MODEL_SD_VAE": "Vae Path",
@@ -292,6 +300,9 @@
   "BACKEND_RELEASE_TAG_DESCRIPTION": "Enter the release tag (e.g. v2.3.0-nightly)",
   "BACKEND_VERSION_DESCRIPTION_OLLAMA_VERSION": "Enter the version number (e.g. 2.3.0b20250630)",
   "BACKEND_SAVE_CHANGES": "Save changes",
+  "BACKEND_COMFYUI_PARAMETERS_LABEL": "Startup Parameters",
+  "BACKEND_COMFYUI_PARAMETERS_DESCRIPTION": "Command-line arguments passed to ComfyUI on startup. Restart required to apply changes.",
+  "BACKEND_CUSTOM_PARAMETERS_HINT": "Custom startup parameters",
 
   "COM_ADD_FILE_TO_RAG": "Add file to the list of available documents",
   "COM_ADD_FILE_TO_RAG_CHECKBOX": "Add/Remove file to/from the list of documents used to generate answers",
